# swig

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
Lib/javascript/napi/: std_shared_ptr.i
Source/CParse/: parser.c  parser.h
Source/Include/: swigconfig.h
toolchains/: BUILD  MODULE.bazel
