"""
SWIG JS
"""

module(
    name = "swigjs",
    version = "5.0.5",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
bazel_dep(name = "pcre2", version = "10.43")

bazel_dep(name = "toolchains", version = "0.0.1")
local_path_override(
    module_name = "toolchains",
    path = "toolchains",
)
